fix display of refresh and config icon on safari

--- a/skin/adminhtml/default/default/monitoring/css/monitoring.css
+++ b/skin/adminhtml/default/default/monitoring/css/monitoring.css
@@ -100,6 +100,7 @@ h4.monitoring-section-title {
     padding-left: 2px;
     /*width: 40px;*/
     position: absolute;
+    top: 3px;
     right: 29px;
     z-index: 156;
 }
